# ching

./: README.md  ching.py  notefordev.md  pyproject.toml
.github/workflows/: python-publish.yml
__pycache__/: readme.md
__test__/: Main.py
ching/: Main.py  ching.py
examples/: Main.py
