[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ching"
version = "1.3.0"
description = "A simple money management library"
authors = [
    { name = "Graham", email = "terpstragraham@gmail.com" }
]
readme = "README.md"
license = { text = "BSD-3-Clause" }
dependencies = []
